--- a/pom.xml
+++ b/pom.xml
@@ -153,12 +153,12 @@
 			<artifactId>all-themes</artifactId>
 			<version>1.0.8</version>
 		</dependency>
-
+-->
 		<dependency>
 			<groupId>javax.enterprise</groupId>
 			<artifactId>cdi-api</artifactId>
 			<version>1.2</version>
-		</dependency> -->
+		</dependency> 
 	</dependencies>
 
 	<build>
